--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -2,34 +2,92 @@ body {
   background-color: #e8e8e8;
 }
 .user_info {
-  padding-left: 50px;
-  padding-top: 20px;
-  h3, h4 {
-    margin: 0;
-  }
+  margin-top: 20px;
   .user_image {
     width: 300px;
     border-radius: 10px;
   }
-  .user_city, .user_state {
-    display: inline-block;
+  .eventsInfoBox {
+    padding: 10px;
+    width: 70%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .personelInfoBox {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    background-color: white;
+    width: 60%;
+    border: 1px solid black;
+    border-radius: 5px;
+    .personelContainer {
+      display: flex;
+      flex: 1;
+      flex-direction: row;
+      .iconContainer {
+        font-size: 20px;
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .infoContainer {
+        flex: 3;
+      }
+    }
+  }
+  .user_state, .user_zip {
+    margin-left: 4px;
+  }
+}
+.profileNameBox {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 20px;
+  h1 {
+    margin: 0;
+  }
+}
+.aboutMeBox {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 20px;
+  h3, h5 {
+    margin: 0;
+  }
+  .aboutMeDescriptionBox {
+    padding: 10px;
+    border-top: 1px solid black;
   }
 }
 .scroll_box {
   padding: 10px;
   border: 1px solid transparent;
   border-radius: 5px;
+  border-top-left-radius: 0px;
   background-color: white;
   overflow-y: scroll;
-  height: 400px;
+  height: 500px;
+  border: 1px solid black;
 }
 
 td {
   vertical-align: middle !important;
 }
 .nav.nav-pills {
+    margin-top: 10px;
   a {
     cursor: pointer;
+    color: black;
+    font-size: 20px;
+  }
+  a:hover {
+    background-color: inherit;
   }
 }
 .user_profile {
@@ -43,7 +101,11 @@ td {
     cursor: pointer;
   }
 }
-
+.panel-heading {
+  background-color: black !important;
+  color: white !important;
+  border-bottom: 0 !important;
+}
 .nameHeader {
   width: 30%;
 }
