made style edits

--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -58,23 +58,15 @@ body {
   margin-top: 20px;
 }
 
-.profileNameBox h1 {
+.profileNameBox h1, .profileNameBox h3, .profileNameBox h5 {
   margin: 0;
 }
 
-.aboutMeBox {
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 10px;
+.profileNameBox .aboutYou {
   margin-top: 20px;
 }
 
-.aboutMeBox h3, .aboutMeBox h5 {
-  margin: 0;
-}
-
-.aboutMeBox .aboutMeDescriptionBox {
+.profileNameBox .aboutMeDescriptionBox {
   padding: 10px;
   border-top: 1px solid black;
 }
@@ -83,7 +75,6 @@ body {
   padding: 10px;
   border: 1px solid transparent;
   border-radius: 5px;
-  border-top-left-radius: 0px;
   background-color: white;
   overflow-y: scroll;
   height: 500px;
