--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,7 +36,7 @@
           </div>
           <div class="form-group">
             <label for="date">Event Date</label>
-            <input type="text" class="form-control flatpickr" id="date" value="<%= @event.date %>" name="date" data-date-format="d-m-Y" />
+            <input type="text" class="form-control flatpickr" id="date" value="<%= @event.date %>" name="date" data-date-format="m-d-Y" />
           </div>
           <div class="form-group">
             <label for="time">Event Time</label>
@@ -214,8 +214,4 @@
   <script src="/js/events/show.js"></script>
   <script src="/js/showEvent.bundle.js"></script>
   <script src="/js/configImages.js"></script>
-  <script type="text/javascript">
-      $("#date").flatpickr();
-      $("#time").flatpickr();
-  </script>
 <% end %>
