--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -154,7 +154,7 @@
           </div>
           <div class="form-group">
             <label for="date">Event Date</label>
-            <input type="text" class="form-control flatpickr" id="date" name="date" data-date-format="d-m-Y" />
+            <input type="text" class="form-control flatpickr" id="date" name="date" data-date-format="m-d-Y" />
           </div>
           <div class="form-group">
             <label for="time">Event Time</label>
