--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
                 </div>
               </div>
               <% if current_user %>
-              <div class="col-xs-6 col-sm-4">
+              <div class="col-xs-6 col-sm-4" id="profile-box" data-id=<%= current_user.id %>>
                 <div class="header_links">
                   <nav class="nav_effect">
                 <%= link_to "Logout", logout_path, method: 'delete' %>
@@ -99,7 +99,7 @@
                     <a href="#" data-toggle="modal" data-target="#login">Login</a>
               <% end %>
                   </nav>
-                  <div class="header_profile">
+                  <div class="header_profile" >
                     <a href="/current_user/dashboard" alt="Profile Image">
                        <% if current_user&.images&.first  %>
                         <%= image_tag(attachment_url(current_user.images.first, :file, :fill, 300, 300), :class => "img-circle header_profile_image")%>
