--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -6,16 +6,29 @@ body {
   margin-top: 20px;
 }
 
+.user_info .profileImageBox {
+  width: 75%;
+  padding: 10px;
+  background-color: white;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
 .user_info .user_image {
   width: 300px;
   border-radius: 10px;
 }
 
 .user_info .eventsInfoBox {
-  padding: 10px;
-  width: 70%;
+  padding-top: 5px;
+  font-size: 17px;
   display: flex;
   justify-content: space-around;
+}
+
+.user_info .eventsInfoBox .eventsSpan {
+  margin-left: 3px;
 }
 
 .user_info .personelInfoBox {
@@ -23,9 +36,18 @@ body {
   flex-direction: column;
   padding: 10px;
   background-color: white;
-  width: 60%;
+  width: 75%;
   border: 1px solid black;
   border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.user_info .personelInfoBox h4 {
+  font-size: 20px;
+}
+
+.user_info .personelInfoBox p {
+  font-size: 17px;
 }
 
 .user_info .personelInfoBox .personelContainer {
@@ -35,7 +57,7 @@ body {
 }
 
 .user_info .personelInfoBox .personelContainer .iconContainer {
-  font-size: 20px;
+  font-size: 30px;
   flex: 1;
   display: flex;
   align-items: center;
@@ -46,8 +68,31 @@ body {
   flex: 3;
 }
 
+.user_info .personelInfoBox .personelContainer .user_street, .user_info .personelInfoBox .personelContainer .user_city, .user_info .personelInfoBox .personelContainer .user_state, .user_info .personelInfoBox .personelContainer .user_zip {
+  font-size: 17px;
+}
+
 .user_info .user_state, .user_info .user_zip {
   margin-left: 4px;
+}
+
+.user_info .buttonsBox {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  background-color: white;
+  width: 75%;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.user_info .buttonsBox button {
+  background-color: black;
+  color: white;
+}
+
+.user_info .buttonsBox button:hover {
+  color: pink;
 }
 
 .profileNameBox {
@@ -77,8 +122,9 @@ body {
   border-radius: 5px;
   background-color: white;
   overflow-y: scroll;
-  height: 500px;
+  height: 486px;
   border: 1px solid black;
+  margin-bottom: 40px;
 }
 
 td {
