--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -1,52 +1,17 @@
+body {
+  background-color: #e8e8e8;
+}
+
 .contentRow {
   margin-top: 40px;
 }
 
+#slider {
+  margin-bottom: 20px;
+}
+
 #slider .slick-slide {
   height: 320px;
-}
-
-.mainContainer {
-  display: flex;
-  flex-direction: column;
-}
-
-.mainContainer .headContainer .spotsContainer {
-  flex-direction: column;
-  flex: 1;
-}
-
-.mainContainer .headContainer .spotsContainer .goingContainer {
-  flex: 1;
-}
-
-.mainContainer .headContainer .spotsContainer .openContainer {
-  flex: 1;
-}
-
-.mainContainer .descContainer {
-  flex: 1;
-}
-
-.mainContainer .descContainer .eventDate {
-  display: inline-block;
-}
-
-.mainContainer .descContainer .eventTime {
-  display: inline-block;
-}
-
-.mainContainer .descContainer .eventDesc {
-  text-decoration: underline;
-}
-
-.mainContainer .descContainer .foodDesc {
-  text-decoration: underline;
-}
-
-.mainContainer .highlightsContainer {
-  flex: 1;
-  margin: 0;
 }
 
 .slick-prev:before, .slick-next:before {
@@ -64,101 +29,313 @@
   left: 5px !important;
 }
 
-.hostProfileContainer {
+.hostProfileBox {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+}
+
+.hostProfileBox .hostImg {
+  border-radius: 10px;
+}
+
+.hostProfileBox button {
+  background-color: black;
+  color: white;
+  transition: 0.3s;
+}
+
+.hostProfileBox button:hover {
+  color: pink;
+}
+
+.detailsContainer {
   display: flex;
   flex-direction: column;
-  height: 100px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 10px;
 }
 
-.hostProfileContainer .hostImgContainer {
-  height: 100%;
-  flex: 4;
+.detailsContainer .titleContainer {
   display: flex;
+  align-items: center;
   justify-content: center;
-  align-items: center;
-}
-
-.hostProfileContainer .hostImgContainer .hostImg {
-  height: 100%;
-}
-
-.hostProfileContainer .hostTextContainer {
   flex: 1;
 }
 
-.hostProfileContainer .hostTextContainer .hostsName {
+.detailsContainer .titleContainer h1 {
   margin: 0;
+  font-size: 28px;
 }
 
-.hostProfileContainer .hostBioContainer {
+.detailsContainer .detailsBottomContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.detailsContainer .calendarContainer {
   flex: 1;
   display: flex;
+  flex-direction: row;
+}
+
+.detailsContainer .calendarContainer .iconContainer {
+  display: flex;
   align-items: center;
+  justify-content: center;
+  flex: 1;
+  font-size: 30px;
 }
 
-.hostProfileContainer .hostBioContainer .hostBio {
-  margin: 0;
+.detailsContainer .calendarContainer .datesContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 2;
 }
 
-.profile-text-margin {
-  margin-top: 31px;
-}
-
-.text_input {
-  height: 8 0px;
-}
-
-.eventTitle {
-  font-size: 60px;
-  margin: 0;
-}
-
-.eventInfoTitle {
+.detailsContainer .calendarContainer .datesContainer h4 {
   font-size: 18px;
 }
 
-.eventInfoTitle a {
-  color: black;
-  text-decoration: none;
+.detailsContainer .guestsContainer {
+  flex: 1;
+  display: flex;
+  flex: row;
 }
 
-.commentsScrollBox {
-  margin-top: 20px;
-  padding: 10px;
+.detailsContainer .guestsContainer .iconContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  font-size: 30px;
+}
+
+.detailsContainer .guestsContainer .numbersContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 2;
+}
+
+.detailsContainer .guestsContainer .numbersContainer h4 {
+  font-size: 18px;
+}
+
+#map {
+  height: 200px;
+}
+
+.mapBox {
+  background-color: white;
   border: 1px solid black;
   border-radius: 5px;
-  height: 400px;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+}
+
+.eventInfoBox {
+  display: flex;
+  flex: row;
+  flex-direction: column;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+}
+
+.eventInfoBox .eventDescContainer {
+  margin-bottom: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.eventInfoBox .detailsSubContainer {
+  margin-bottom: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.eventInfoBox h4, .eventInfoBox h3 {
+  margin: 10px 0;
+}
+
+.eventInfoBox h3 {
+  font-size: 20px;
+}
+
+.eventInfoBox h4 {
+  font-size: 17px;
+}
+
+.eventInfoBox .iconContainer {
+  font-size: 30px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.eventInfoBox .infoContainer {
+  flex: 2;
+}
+
+.eventSpecificBox {
+  display: flex;
+  flex: row;
+  flex-direction: column;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+}
+
+.eventSpecificBox h4, .eventSpecificBox h3 {
+  margin: 10px 0;
+}
+
+.eventSpecificBox h3 {
+  font-size: 20px;
+}
+
+.eventSpecificBox h4 {
+  font-size: 17px;
+}
+
+.eventSpecificBox .iconContainer {
+  font-size: 30px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.eventSpecificBox .infoContainer {
+  flex: 2;
+}
+
+.eventSpecificBox .childrenContainer {
+  margin-bottom: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.eventSpecificBox .alcoholContainer {
+  margin-bottom: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.eventSpecificBox .guestInfoContainer {
+  margin-bottom: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.commentsBox {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+}
+
+.commentsBox .commentsScrollBox {
+  margin-top: 10px;
   overflow: scroll;
+  height: 300px;
 }
 
-.commentTitle {
-  font-weight: bolder;
+.commentsBox .commentsTitle {
+  margin: 10px 0;
 }
 
-.comments-area {
-  margin-top: 45px;
+.commentsBox .panel-heading {
+  background-color: black;
+  color: white;
 }
 
-.commentContainer {
-  box-sizing: border-box;
-}
-
-.commentName {
-  display: inline-block;
-  margin: 0;
-}
-
-.commentDateTime {
-  display: inline-block;
-  float: right;
-  margin: 3px 0 0 0;
-  color: gray;
-}
-
-.commentFlag {
-  display: inline-block;
-  height: 12px;
-  float: right;
-  margin: 3px 0 0 15px;
+.commentsBox .commentFlag {
+  color: white;
+  font-size: 20px;
   cursor: pointer;
+  margin-left: 10px;
+}
+
+.commentsBox .nameContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.commentsBox .timeFlagContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.buttonContainer {
+  margin-bottom: 20px;
+}
+
+.buttonContainer button {
+  color: white;
+  background-color: black;
+  transition: 0.3s;
+}
+
+.buttonContainer button:hover {
+  color: pink;
+}
+
+@media screen and (min-width: 500px) {
+  .eventInfoBox, .hostProfileBox, .eventSpecificBox {
+    width: 75%;
+  }
+  .commentsBox, .mapBox, .detailsContainer {
+    width: 95%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .detailsContainer {
+    flex-direction: row;
+  }
+  .detailsContainer .titleContainer h1 {
+    font-size: 32px;
+  }
+  .detailsContainer .detailsBottomContainer {
+    display: flex;
+    flex-direction: row;
+  }
+  .detailsContainer .calendarContainer .datesContainer h4 {
+    font-size: 20px;
+  }
+  .detailsContainer .guestsContainer .numbersContainer h4 {
+    font-size: 20px;
+  }
+  #map {
+    height: 300px;
+  }
+  .commentsBox .commentsScrollBox {
+    height: 400px;
+  }
 }
