buttons for messaging host and joining event are now responsive and in react.

--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -339,3 +339,13 @@ body {
     height: 400px;
   }
 }
+
+.message-button {
+  margin: 10px 10px 0 10px;
+}
+
+.btn-black {
+  background-color: black;
+  color: white;
+  transition: 0.3s;
+}
