--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,7 +92,7 @@
                   <nav class="nav_effect">
                 <%= link_to "Logout", logout_path, method: 'delete' %>
               <% else %>
-              <div class="col-xs-6 col-sm-4">
+              <div class="col-xs-6 col-sm-4" id="profile-box" data-id="none">
                 <div class="header_links">
                   <nav class="nav_effect">
                     <a href="#" data-toggle="modal" data-target="#sign_up">Sign Up</a>
