--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -305,3 +305,13 @@ body {
     }
   }
 }
+
+.message-button {
+  margin: 10px 10px 0 10px
+}
+
+.btn-black{
+  background-color: black;
+  color: white;
+  transition: 0.3s;
+}
