--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,7 +42,7 @@
           </div>
           <div class="form-group">
             <label for="date">Event Date</label>
-            <input type="text" class="form-control flatpickr" id="date" value="<%= @event.date %>" name="date" data-date-format="m-d-Y" />
+            <input type="text" class="form-control flatpickr" id="date" value="<%= @event.date %>" name="date" data-date-format="d-m-Y" />
           </div>
           <div class="form-group">
             <label for="time">Event Time</label>
