--- a/public/css/dashboard/dashboard.css
+++ b/public/css/dashboard/dashboard.css
@@ -120,6 +120,15 @@ body {
   font-size: 18px;
 }
 
+.tableHeadAttending {
+  background-color: black;
+  color: white;
+}
+
+.conversationTable a {
+  color: black;
+}
+
 .scroll_box {
   padding: 10px;
   border: 1px solid transparent;
@@ -201,11 +210,23 @@ td {
   height: 80px;
 }
 
+.conversation-container {
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  color: black;
+}
+
+.message-preview {
+  font-size: 20px;
+}
+
 @media screen and (min-width: 768px) {
   .profileNameBox {
     width: 95%;
   }
   .scroll_box {
-    width: 95;
+    width: 95%;
   }
 }
