--- a/public/css/events/index.scss
+++ b/public/css/events/index.scss
@@ -187,3 +187,12 @@ a {
     }
   }
 }
+
+.map-overlay {
+  position:relative;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  height: 100%;
+  width: 100%;
+}
