--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -2,9 +2,9 @@ body {
   background-color: #e8e8e8;
 }
 .user_info {
-  margin-top: 20px;
   .profileImageBox {
-    width: 75%;
+    margin-top: 20px;
+    width: 100%;
     padding: 10px;
     background-color: white;
     margin-bottom: 20px;
@@ -28,7 +28,7 @@ body {
     flex-direction: column;
     padding: 10px;
     background-color: white;
-    width: 75%;
+    width: 100%;
     border: 1px solid black;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -65,12 +65,13 @@ body {
     justify-content: space-around;
     padding: 10px;
     background-color: white;
-    width: 75%;
+    width: 100%;
     border: 1px solid black;
     border-radius: 5px;
     button {
       background-color: black;
       color: white;
+      transition: 0.3s;
     }
     button:hover {
       color: pink;
@@ -102,11 +103,64 @@ body {
   background-color: black;
   color: white;
 }
-.conversationTable {
-  a {
-    color: black;
+
+.conversationContainer {
+  display: flex;
+  flex-direction: column;;
+  .conversationHeader {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    .conversationNameContainer {
+      margin-left: 5px;
+      display: flex;
+      flex: 1;
+      align-items: center;
+      justify-content: flex-start;
+    }
+    .conversationDateContainer {
+      flex: 1;
+      display: flex;
+      font-size: 12px;
+      align-items: center;
+      justify-content: flex-end;
+    }
+  }
+  .conversationBody {
+    flex: 2;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid black;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    margin-bottom: 20px;
+  }
+  .conversationLeftsideContainer {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      height: 100%;
+      width: 100%;
+    }
+  }
+  .conversationRightsideContainer {
+    padding: 10px;
+    flex: 6;
+    .messagePreviewTitle {
+      text-decoration: underline;
+    }
   }
 }
+
 .scroll_box {
   padding: 10px;
   border: 1px solid transparent;
@@ -117,17 +171,20 @@ body {
   border: 1px solid black;
   margin-bottom: 40px;
   width: 95%;
+  a {
+    color: black;
+    transition: 0.3s;
+  }
 }
 
 td {
   vertical-align: middle !important;
 }
 .nav.nav-pills {
-    margin-top: 10px;
   a {
     cursor: pointer;
     color: black;
-    font-size: 20px;
+    font-size: 18px;
   }
   a:hover {
     background-color: inherit;
@@ -175,19 +232,25 @@ td {
 .text_input {
   height: 80px;
 }
-.conversation-container{
-  border-top: 1px solid gray;
-  border-bottom: 1px solid gray;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  color:black;
-}
-.message-preview{
-  font-size: 20px;
-}
 
 
 @media screen and (min-width: 768px) {
+  .nav.nav-pills {
+    a {
+      font-size: 20px;
+    }
+  }
+  .user_info {
+    .profileImageBox {
+      width: 75%;
+    }
+    .personelInfoBox {
+      width: 75%;
+    }
+    .buttonsBox {
+      width: 75%;
+    }
+  }
   .profileNameBox {
     width: 95%;
   }
