--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -73,7 +73,7 @@ body {
       color: white;
       transition: 0.3s;
     }
-    button:hover {
+    button:hover, button:focus {
       color: pink;
     }
   }
