added password change to dashboard

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -44,6 +44,7 @@
             <label for="description">Give A Brief Description Of Yourself</label>
             <textarea type="text" id="descriptionBio" class="form-control text_input" name="description"><%= @user&.description %></textarea>
           </div>
+          <a href="/users/new_password">Change Password</a>
           <br />
           <h4>Address</h4>
           <hr />
