--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -72,6 +72,7 @@ body {
       background-color: black;
       color: white;
       transition: 0.3s;
+      width: 110px;
     }
     button:hover, button:focus {
       color: pink;
