--- a/public/css/events/index.css
+++ b/public/css/events/index.css
@@ -42,13 +42,9 @@ body {
   padding-top: 10px;
 }
 
-.eventInfoTitle {
-  font-size: 20px;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+.eventInfoTitle a {
+  color: black;
+  font-size: 16px;
 }
 
 .eventContainer {
