--- a/public/css/events/show.css
+++ b/public/css/events/show.css
@@ -142,6 +142,11 @@ body {
   width: 100%;
 }
 
+.eventInfoTitle a {
+  color: black;
+  font-size: 16px;
+}
+
 .eventInfoBox {
   display: flex;
   flex: row;
@@ -292,7 +297,8 @@ body {
 }
 
 .buttonContainer {
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .buttonContainer button {
