--- a/public/css/events/show.scss
+++ b/public/css/events/show.scss
@@ -117,6 +117,12 @@ body {
   padding: 10px;
   width: 100%;
 }
+.eventInfoTitle {
+  a {
+    color: black;
+    font-size: 16px;
+  }
+}
 .eventInfoBox {
   display: flex;
   flex: row;
@@ -243,7 +249,8 @@ body {
   }
 }
 .buttonContainer {
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
   button {
     color: white;
     background-color: black;
