--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,4 @@
-<% content_for :stylesheets do %>
-  <link rel="stylesheet" href="/css/flatpickr.min.css" />
+<% content_for :stylesheets do %>  <link rel="stylesheet" href="/css/flatpickr.min.css" />
   <link rel="stylesheet" href="/css/events/show.css" />
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
