--- a/app/views/users/new_password.html.erb
+++ b/app/views/users/new_password.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
       <div class="center-block">
         <form method="post" action="#" id="changePassword" enctype="multipart/form-data">
           <div class="form-group">
@@ -20,7 +20,7 @@
             <input type="password" class="form-control" id="confirmPassword" name="password_confirmation"  />
           </div>
         </form>
-        <button type="button" class="btn" id="submitPassword">Submit</button>
+        <button type="button" class="btn center-block" id="submitPassword">Submit</button>
       </div>
     </div>
   </div>
