working on password recover

--- a/public/css/random/password.scss
+++ b/public/css/random/password.scss
@@ -11,3 +11,14 @@
   color: pink;
   background-color: black;
 }
+
+#submitEmail {
+  margin-bottom: 30vh;
+  background-color: black;
+  color: white;
+  transition: 0.3s;
+}
+#submitEmail:hover, #submitEmail:focus, #submitEmail:active {
+  color: pink;
+  background-color: black;
+}
