--- a/public/css/random/password.css
+++ b/public/css/random/password.css
@@ -13,3 +13,15 @@
   color: pink;
   background-color: black;
 }
+
+#submitEmail {
+  margin-bottom: 30vh;
+  background-color: black;
+  color: white;
+  transition: 0.3s;
+}
+
+#submitEmail:hover, #submitEmail:focus, #submitEmail:active {
+  color: pink;
+  background-color: black;
+}
