--- a/public/css/user/user.css
+++ b/public/css/user/user.css
@@ -27,59 +27,8 @@ body {
   margin-left: 3px;
 }
 
-.user_info .personelInfoBox {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  background-color: white;
-  width: 100%;
-  border: 1px solid black;
-  border-radius: 5px;
-  margin-bottom: 20px;
-}
-
-.user_info .personelInfoBox h4 {
-  font-size: 20px;
-}
-
-.user_info .personelInfoBox p {
-  font-size: 17px;
-}
-
-.user_info .personelInfoBox .personelContainer {
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-}
-
-.user_info .personelInfoBox .personelContainer .iconContainer {
-  font-size: 30px;
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.user_info .personelInfoBox .personelContainer .infoContainer {
-  flex: 3;
-}
-
-.user_info .personelInfoBox .personelContainer .user_street, .user_info .personelInfoBox .personelContainer .user_city, .user_info .personelInfoBox .personelContainer .user_state, .user_info .personelInfoBox .personelContainer .user_zip {
-  font-size: 17px;
-}
-
-.user_info .user_state, .user_info .user_zip {
-  margin-left: 4px;
-}
-
 .user_info .buttonsBox {
-  display: flex;
-  justify-content: space-around;
-  padding: 10px;
-  background-color: white;
-  width: 100%;
-  border: 1px solid black;
-  border-radius: 5px;
+  margin-top: 5px;
 }
 
 .user_info .buttonsBox button {
@@ -130,14 +79,21 @@ body {
   cursor: pointer;
 }
 
+.scroll_box {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  background-color: white;
+  overflow-y: scroll;
+  height: 500px;
+  border: 1px solid black;
+  margin-bottom: 40px;
+  width: 95%;
+}
+
 @media screen and (min-width: 768px) {
   .user_info .profileImageBox {
-    width: 75%;
-  }
-  .user_info .personelInfoBox {
-    width: 75%;
-  }
-  .user_info .buttonsBox {
     width: 75%;
   }
   .profileNameBox {
