--- a/public/css/user/user.css
+++ b/public/css/user/user.css
@@ -79,17 +79,156 @@ body {
   cursor: pointer;
 }
 
-.scroll_box {
+.activityContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   margin-top: 20px;
+}
+
+.activityHeader {
+  flex: 1;
   padding: 10px;
-  border: 1px solid transparent;
   border-radius: 5px;
   background-color: white;
-  overflow-y: scroll;
-  height: 500px;
+  border: 1px solid black;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.activityHeader h3 {
+  margin: 0;
+}
+
+.scrollContainers {
+  flex: 8;
+  display: flex;
+  flex-direction: column;
+}
+
+.activityBoxLeft {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: white;
   border: 1px solid black;
   margin-bottom: 40px;
-  width: 95%;
+  width: 100%;
+}
+
+.activityBoxLeft .leftHeader {
+  flex: 1;
+}
+
+.activityBoxLeft .leftContent {
+  flex: 10;
+  overflow-y: scroll;
+  height: 400px;
+}
+
+.activityBoxLeft h2, .activityBoxLeft h3, .activityBoxLeft h4 {
+  margin: 0;
+}
+
+.activityBoxLeft h3 {
+  margin-bottom: 10px;
+}
+
+.activityBoxRight {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: white;
+  border: 1px solid black;
+  margin-bottom: 40px;
+  width: 100%;
+}
+
+.activityBoxRight .rightHeader {
+  flex: 1;
+}
+
+.activityBoxRight .rightContent {
+  flex: 10;
+  overflow-y: scroll;
+  height: 400px;
+}
+
+.activityBoxRight h2, .activityBoxRight h3, .activityBoxRight h4 {
+  margin: 0;
+}
+
+.activityBoxRight h3 {
+  margin-bottom: 10px;
+}
+
+.conversationContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.conversationContainer .conversationHeader {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.conversationContainer .conversationHeader .conversationNameContainer {
+  margin-left: 5px;
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.conversationContainer .conversationHeader .conversationDateContainer {
+  flex: 1;
+  display: flex;
+  font-size: 12px;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.conversationContainer .conversationBody {
+  flex: 2;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  background-color: white;
+  border: 1px solid black;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.conversationContainer .conversationLeftsideContainer {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.conversationContainer .conversationLeftsideContainer img {
+  border-radius: 5px;
+  height: 100%;
+  width: 100%;
+}
+
+.conversationContainer .conversationRightsideContainer {
+  padding: 10px;
+  flex: 10;
+  display: flex;
+  align-items: center;
+  color: black;
 }
 
 @media screen and (min-width: 768px) {
@@ -99,7 +238,18 @@ body {
   .profileNameBox {
     width: 95%;
   }
-  .scroll_box {
+  .activityContainer {
     width: 95%;
+  }
+  .scrollContainers {
+    flex: 8;
+    display: flex;
+    flex-direction: row;
+  }
+  .activityBoxLeft {
+    margin-right: 10px;
+  }
+  .activityBoxRight {
+    margin-left: 10px;
   }
 }
